--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,9 @@
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1.125rem;
-  --normal-font-size: 0.938rem;
-  --small-font-size: 0.813rem;
-  --smaller-font-size: 0.75rem;
+  --normal-font-size: .938rem;
+  --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
 }
 
 /* สำหรับจอที่ใหญ่กว่า 968px */
@@ -34,8 +34,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
   }
 }
 
@@ -87,7 +87,10 @@ body {
   color: var(--text-color);
 }
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--title-color);
   font-weight: 600;
 }
@@ -183,9 +186,9 @@ img {
     width: 100%;
     background-color: var(--body-color);
     padding: 2rem 1.5rem 4rem;
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
     border-radius: 1.5rem 1.5rem 0 0;
-    transition: 0.3s;
+    transition: .3s;
   }
 }
 
@@ -214,7 +217,7 @@ img {
 .nav__close {
   position: absolute;
   right: 1.3rem;
-  bottom: 0.5rem;
+  bottom: .5rem;
   font-size: 1.5rem;
   cursor: pointer;
   color: var(--first-color);
@@ -236,7 +239,7 @@ img {
 
 /* ฟังก์ชั่นเพิ่มเงาหลัง Header */
 .scroll-header {
-  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
 }
 
 /*==================== Home ====================*/
@@ -245,7 +248,7 @@ img {
 }
 
 .home__content {
-  grid-template-columns: 0.5fr 3fr;
+  grid-template-columns: .5fr 3fr;
   padding-top: 3.5rem;
   align-items: center;
 }
@@ -285,7 +288,7 @@ img {
 .home__subtitle {
   color: var(--text-color);
   font-weight: 500;
-  margin-bottom: 0.75rem;
+  margin-bottom: .75rem;
 }
 
 /*==================== typing ====================*/
@@ -314,9 +317,9 @@ img {
 }
 
 .home__description::after {
-  width: 0.125rem;
+  width: .125rem;
   background: var(--text-color);
-  animation: typewriter 4s steps(18) 1s forwards, blink 0.75s steps(18) infinite;
+  animation: typewriter 4s steps(18) 1s forwards, blink .75s steps(18) infinite;
 }
 
 @keyframes typewriter {
@@ -331,18 +334,17 @@ img {
   }
 }
 
-
 .home__scroll {
   display: none;
 }
 
 .home__scroll-button {
   color: var(--first-color);
-  transition: 0.3s;
+  transition: .3s;
 }
 
 .home__scroll-button:hover {
-  transform: translateY(0.25rem);
+  transform: translateY(.25rem);
 }
 
 .home__scroll-mouse {
@@ -353,7 +355,7 @@ img {
   font-size: var(--small-font-size);
   color: var(--text-color);
   font-weight: 500;
-  margin-right: 0.25rem;
+  margin-right: .25rem;
 }
 
 .home__scroll-arrow {
@@ -366,7 +368,7 @@ img {
   background-color: var(--first-color);
   color: #fff;
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   font-weight: 500;
 }
 
@@ -376,8 +378,8 @@ img {
 
 .button__icon {
   font-size: 1.25rem;
-  margin-left: 0.5rem;
-  transition: 0.3s;
+  margin-left: .5rem;
+  transition: .3s;
 }
 
 .button--flex {
@@ -427,29 +429,29 @@ img {
 
 /*==================== Quotes ====================*/
 .quotes {
-    text-align: center;
-  }
-  
-  .quotes__bg {
-    background-color: var(--first-color-second);
-    padding-top: 3rem;
-  }
-  
-  .quotes__title {
-    font-size: var(--h2-font-size);
-    margin-bottom: 0.75rem;
-  }
-  
-  .quotes__title,
-  .quotes__description {
-    color: #fff;
-  }
-  
-  .quotes__img {
-    width: 300px;
-    height: auto;
-    justify-self: center;
-  }
+  text-align: center;
+}
+
+.quotes__bg {
+  background-color: var(--first-color-second);
+  padding-top: 3rem;
+}
+
+.quotes__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: .75rem;
+}
+
+.quotes__title,
+.quotes__description {
+  color: #fff;
+}
+
+.quotes__img {
+  width: 300px;
+  height: auto;
+  justify-self: center;
+}
 
 /*==================== Skills ====================*/
 .skills__container {
@@ -470,7 +472,7 @@ img {
 }
 
 .skills__icon {
-  margin-right: 0.75rem;
+  margin-right: .75rem;
 }
 
 .skills__title {
@@ -484,7 +486,7 @@ img {
 
 .skills__arrow {
   margin-left: auto;
-  transition: 0.4s;
+  transition: .4s;
 }
 
 .skills__list {
@@ -495,7 +497,7 @@ img {
 .skills__title {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
 }
 
 .skills__subtitle {
@@ -505,7 +507,7 @@ img {
 
 .skills__arrow {
   margin-left: auto;
-  transition: 0.4s;
+  transition: .4s;
 }
 
 .skills__name {
@@ -516,7 +518,7 @@ img {
 .skills__bar,
 .skills__percentage {
   height: 5px;
-  border-radius: 0.25rem;
+  border-radius: .25rem;
 }
 
 .skills__bar {
@@ -591,7 +593,7 @@ img {
 
 .background__icon {
   font-size: 1.8rem;
-  margin-right: 0.25rem;
+  margin-right: .25rem;
 }
 
 .background__data {
@@ -655,21 +657,21 @@ img {
 
 .portfolio__img {
   width: 265px;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   justify-self: center;
 }
 
 .portfolio__title {
   font-size: var(--h3-font-size);
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
 }
 
 .portfolio__description {
-  margin-bottom: 0.75rem;
+  margin-bottom: .75rem;
 }
 
 .portfolio__button:hover .button__icon {
-  transform: translateX(0.25rem);
+  transform: translateX(.25rem);
 }
 
 .swiper-button-prev::after,
@@ -683,11 +685,11 @@ img {
 }
 
 .swiper-button-prev {
-  left: -0.5rem;
+  left: -.5rem;
 }
 
 .swiper-button-next {
-  right: -0.5rem;
+  right: -.5rem;
 }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
@@ -720,7 +722,7 @@ img {
 
 .contact__icon {
   font-size: 2rem;
-  margin-right: 0.75rem;
+  margin-right: .75rem;
   color: var(--first-color-lighter);
 }
 
@@ -735,8 +737,8 @@ img {
 
 .contact__content {
   background-color: var(--input-color);
-  border-radius: 0.5rem;
-  padding: 0.75rem 1rem 0.25rem;
+  border-radius: .5rem;
+  padding: .75rem 1rem .25rem;
 }
 
 /*==================== FOOTER ====================*/
@@ -751,7 +753,7 @@ img {
 
 .footer__title {
   font-size: var(--h1-font-size);
-  margin-bottom: 0.25rem;
+  margin-bottom: .25rem;
 }
 
 .footer__subtitle {
@@ -793,11 +795,11 @@ img {
   right: 1rem;
   bottom: -20%;
   background-color: var(--first-color);
-  opacity: 0.8;
-  padding: 0 0.3rem;
-  border-radius: 0.4rem;
+  opacity: .8;
+  padding: 0 .3rem;
+  border-radius: .4rem;
   z-index: 10;
-  transition: 0.4s;
+  transition: .4s;
 }
 
 .scrollup:hover {
@@ -816,14 +818,14 @@ img {
 
 /*========== Scroll Bar ==========*/
 ::-webkit-scrollbar {
-  width: 0.6rem;
+  width: .6rem;
   background-color: var(--scroll-bar-color);
-  border-radius: 0.5rem;
+  border-radius: .5rem;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--scroll-thumb-color);
-  border-radius: 0.5rem;
+  border-radius: .5rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -838,15 +840,12 @@ img {
     margin-right: 2rem;
   }
 
-  .nav__menu {
-    padding: 2rem 0.25rem 4rem;
-  }
   .nav__list {
     column-gap: 0;
   }
 
   .home__content {
-    grid-template-columns: 0.25fr 3fr;
+    grid-template-columns: .25fr 3fr;
   }
   .home__blob {
     width: 240px;
@@ -857,7 +856,7 @@ img {
   }
 
   .background__data {
-    gap: 0.5rem;
+    gap: .5rem;
   }
 
   .footer__hidden {
@@ -902,7 +901,7 @@ img {
 
   .background__sections {
     display: grid;
-    grid-template-columns: 0.6fr;
+    grid-template-columns: .6fr;
     justify-content: center;
   }
   .footer {
@@ -1008,7 +1007,7 @@ img {
     margin: 0 1rem;
   }
   .background__sections {
-    grid-template-columns: 0.5fr;
+    grid-template-columns: .5fr;
   }
 
   .portfolio__img {
@@ -1032,7 +1031,7 @@ img {
     column-gap: 3rem;
   }
   .quotes__data {
-    padding-top: 0.8rem;
+    padding-top: .8rem;
   }
   .quotes__img {
     width: 350px;
