--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@ img {
   animation: typewriter 4s steps(18) 1s forwards, blink .75s steps(18) infinite;
 }
 
-.home__description span{
+.home__description span {
   color: var(--first-color);
 }
 
@@ -534,34 +534,63 @@ img {
   background-color: var(--first-color);
 }
 
-.skills__html {
+/* ===== Languages ===== */
+.skills__percentage.skills__go {
+  width: 70%;
+}
+
+.skills__percentage.skills__csharp {
+  width: 65%;
+}
+
+.skills__percentage.skills__tsjs {
+  width: 60%;
+}
+
+.skills__percentage.skills__html {
+  width: 60%;
+}
+
+.skills__percentage.skills__css {
+  width: 55%;
+}
+
+/* ===== Frameworks & Libraries ===== */
+.skills__percentage.skills__angular {
+  width: 65%;
+}
+
+.skills__percentage.skills__vue {
+  width: 55%;
+}
+
+.skills__percentage.skills__dotnet {
+  width: 60%;
+}
+
+.skills__percentage.skills__bootstrap {
+  width: 50%;
+}
+
+.skills__percentage.skills__flask {
   width: 40%;
 }
 
-.skills__css {
-  width: 30%;
-}
-
-.skills__js {
-  width: 10%;
-}
-
-.skills__php {
-  width: 15%;
-}
-
-.skills__dart {
-  width: 5%;
-}
-
-.skills__vscode {
+/* ===== DevOps & Tools ===== */
+.skills__percentage.skills__k8s {
   width: 70%;
 }
-.skills__photoshop {
-  width: 25%;
+
+.skills__percentage.skills__kafka {
+  width: 60%;
 }
-.skills__flutter {
-  width: 5%;
+
+.skills__percentage.skills__argo {
+  width: 55%;
+}
+
+.skills__percentage.skills__vscode {
+  width: 80%;
 }
 
 .skills__close .skills__list {
@@ -696,7 +725,7 @@ img {
   right: -.5rem;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets {
+.swiper-container-horizontal>.swiper-pagination-bullets {
   bottom: -2.5rem;
 }
 
@@ -855,6 +884,7 @@ img {
   .home__content {
     grid-template-columns: .25fr 3fr;
   }
+
   .home__blob {
     width: 240px;
   }
@@ -879,9 +909,11 @@ img {
     font-size: 1.3rem;
     margin-top: 2rem;
   }
+
   .home__data {
     grid-column: initial;
   }
+
   .home__img {
     order: 1;
     justify-self: center;
@@ -909,10 +941,11 @@ img {
     grid-template-columns: .6fr;
     justify-content: center;
   }
+
   .footer {
     margin-top: 1.5rem;
   }
-  
+
   .footer__hidden {
     display: inline;
   }
@@ -931,6 +964,7 @@ img {
   .section {
     padding: 6rem 0 2rem;
   }
+
   .section__subtitle {
     margin-bottom: 4rem;
   }
@@ -950,18 +984,22 @@ img {
     height: calc(3rem + 1.5rem);
     column-gap: 1rem;
   }
+
   .nav__icon,
   .nav__close,
   .nav__toggle {
     display: none;
   }
+
   .nav__list {
     display: flex;
     column-gap: 2rem;
   }
+
   .nav__menu {
     margin-left: auto;
   }
+
   .change-theme {
     margin: 0;
   }
@@ -969,23 +1007,28 @@ img {
   .home__container {
     row-gap: 4rem;
   }
+
   .home__content {
     padding-top: 2rem;
     column-gap: 2rem;
   }
+
   .home__description {
     font-size: 1.5rem;
     margin-top: 2rem;
   }
+
   .home__blob {
     width: 370px;
   }
+
   .home__scroll {
     display: block;
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc(4s + 1s) forwards;
   }
+
   .home__scroll-button {
     margin-left: 3rem;
   }
@@ -1000,25 +1043,35 @@ img {
   .about__container {
     column-gap: 5rem;
   }
+
   .about__img {
     width: 300px;
   }
+
   .about__description {
     text-align: initial;
   }
+
   .about__info {
     justify-content: space-between;
   }
+
   .about__buttons {
     justify-content: initial;
+  }
+
+  .skills__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .background__tabs {
     justify-content: center;
   }
+
   .background__button {
     margin: 0 1rem;
   }
+
   .background__sections {
     grid-template-columns: .5fr;
   }
@@ -1026,6 +1079,7 @@ img {
   .portfolio__img {
     width: 320px;
   }
+
   .portfolio__content {
     align-items: center;
   }
@@ -1033,9 +1087,11 @@ img {
   .quotes {
     text-align: initial;
   }
+
   .quotes__bg {
     background: none;
   }
+
   .quotes__container {
     background-color: var(--first-color-second);
     border-radius: 1rem;
@@ -1043,21 +1099,27 @@ img {
     grid-template-columns: 1fr max-content;
     column-gap: 3rem;
   }
+
   .quotes__data {
     padding-top: .8rem;
   }
+
   .quotes__img {
     width: 350px;
   }
+
   .footer {
     margin-top: 6rem;
   }
+
   .footer__container {
     grid-template-columns: repeat(3, 1fr);
   }
+
   .footer__bg {
     padding: 3rem 0 3.5rem;
   }
+
   .footer__hidden {
     display: none;
   }
@@ -1065,6 +1127,7 @@ img {
 
 /* จอขนาดใหญ่ */
 @media screen and (min-width: 1024px) {
+
   .header,
   .main,
   .footer__container {
@@ -1079,25 +1142,35 @@ img {
   .home__blob {
     width: 400px;
   }
+
   .home__social {
     transform: translateX(-6rem);
+  }
+
+  .skills__container {
+    max-width: 1024px;
   }
 
   .portfolio__content {
     column-gap: 5rem;
   }
+
   .swiper-portfolio-icon {
     font-size: 3.5rem;
   }
+
   .swiper-button-prev {
     left: -3.5rem;
   }
+
   .swiper-button-next {
     right: -3.5rem;
   }
-  .swiper-container-horizontal > .swiper-pagination-bullets {
+
+  .swiper-container-horizontal>.swiper-pagination-bullets {
     bottom: -4.5rem;
   }
+
   .footer__hidden {
     display: none;
   }
